--- a/login.html
+++ b/login.html
@@ -19,7 +19,6 @@
                 <div class="social-container">
                     <a href="#" class="social"><i class="fab fa-facebook-f"></i></a>
                     <a href="#" class="social"><i class="fab fa-google-plus-g"></i></a>
-                    <a href="#" class="social"><i class="fab fa-linkedin-in"></i></a>
                 </div>
                 <span>or use your email for registration</span>
                 <input type="text" placeholder="Name" />
@@ -34,12 +33,11 @@
                 <div class="social-container">
                     <a href="#" class="social"><i class="fab fa-facebook-f"></i></a>
                     <a href="#" class="social"><i class="fab fa-google-plus-g"></i></a>
-                    <a href="#" class="social"><i class="fab fa-linkedin-in"></i></a>
                 </div>
                 <span>or use your account</span>
                 <input type="email" placeholder="email" />
                 <input type="password" placeholder="Password" />
-                <a href="#">Forgot your password?</a>
+                <a href="#">Forget password?</a>
                 <button>Sign In</button>
             </form>
         </div>
